--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "body-scroll-lock": "^2.6.4",
     "cheeseburger-menu": "0.0.13",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
