--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
   "dependencies": {
     "body-scroll-lock": "^2.6.4",
     "cheeseburger-menu": "0.0.13",
-    "gatsby": "^2.18.12",
+    "gatsby": "^2.20.7",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-google-analytics": "^2.1.35",
-    "gatsby-plugin-manifest": "^2.2.31",
+    "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sass": "^2.1.27",
-    "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-source-filesystem": "^2.1.40",
-    "gatsby-transformer-sharp": "^2.3.7",
+    "gatsby-transformer-sharp": "^2.4.2",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
+    "react-scrollspy": "^3.4.2",
     "smooth-scroll": "^16.1.1"
   },
   "devDependencies": {
