--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-scrollspy": "^3.4.2",
-    "smooth-scroll": "^16.1.1"
+    "smooth-scroll": "^16.1.1",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
